# python-nimc

./: .gitignore  CLAUDE.md  LICENSE  README.md  gunicorn.conf.py  pyproject.toml
.github/: copilot-instructions.md
docs/: htmx_alpine_tutorial.html  nginx_config_example
nimc/: __init__.py
nimc/cli/: __init__.py  __main__.py  settings.py
nimc/core/: __init__.py  exceptions.py  firewall.py  server.py
nimc/web/: __init__.py  app.py  auth.py  database.py  logging.py  settings.py
nimc/web/routes/: __init__.py  auth.py  pages.py  util.py
nimc/web/static/css/: style.css
nimc/web/static/js/: alpine.min.js  htmx.min.js
nimc/web/templates/: base.html  dashboard.html  login.html
nimc/web/templates/partials/: nav.html
server_skeleton/: cloud-config.yaml.j2  server.toml
server_skeleton/files/: check_inactivity  nimc.service.j2  self_destruct.j2  sshd_config.j2  start_server  stop_server
servers/: README.md
tests/: test_firewall.py  test_server.py
